fixed up scrollbar visibility and codemirror bg

--- a/src/theme/darkly.scss
+++ b/src/theme/darkly.scss
@@ -11030,6 +11030,9 @@ $bv-enable-table-stacked: false;
 }
 
 .overflow-y-handled{
+  overflow-y:hidden;
+}
+.overflow-y-handled:hover{
   overflow-y:scroll;
 }
 
@@ -11044,15 +11047,15 @@ $bv-enable-table-stacked: false;
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #202021;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #404040;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #4e4e4e;
 }
